[package]
name = "wasmtime-wasi-serial"
version = "0.21.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
anyhow = "1.0"
log = { version = "0.4.8", default-features = false }
wasmtime = { path = "../wasmtime", version = "0.21.0", default-features = false }
wasmtime-runtime = { path = "../runtime", version = "0.21.0" }
wasmtime-wiggle = { path = "../wiggle/wasmtime", version = "0.21.0" }
wasmtime-wasi = { path = "../wasi", version = "0.21.0" }
wiggle = { path = "../wiggle", version = "0.21.0" }

thiserror = "1.0"
serialport = "3.3.0"

[badges]
maintenance = { status = "experimental" }
